Bug 48130 - [4.7 Regression]: build fails on libsupc++/nested_exception.cc
Summary: [4.7 Regression]: build fails on libsupc++/nested_exception.cc
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: libstdc++ (show other bugs)
Version: 4.7.0
: P3 normal
Target Milestone: 4.7.0
Assignee: Benjamin Kosnik
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-15 04:12 UTC by Hans-Peter Nilsson
Modified: 2011-03-15 20:03 UTC (History)
1 user (show)

See Also:
Host:
Target: cris-axis-elf
Build:
Known to work:
Known to fail:
Last reconfirmed: 2011-03-15 05:17:28


Attachments
patch (485 bytes, patch)
2011-03-15 05:34 UTC, Benjamin Kosnik
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Hans-Peter Nilsson 2011-03-15 04:12:02 UTC
With revision 170968 the tree built (testresults show 1 regression).
From revision 170978 and on, build has failed as follows:

libtool: compile:  /tmp/hpautotest-gcc1/cris-elf/gccobj/./gcc/xgcc -shared-libgcc -B/tmp/hpautotest-gcc1/cris-elf/gccobj/./gcc -nostdinc++ -L/tmp/hpautotest-gcc1/cris-elf/gccobj/cris-elf/libstdc++-v3/src -L/tmp/hpautotest-gcc1/cris-elf/gccobj/cris-elf/libstdc++-v3/src/.libs -nostdinc -B/tmp/hpautotest-gcc1/cris-elf/gccobj/cris-elf/newlib/ -isystem /tmp/hpautotest-gcc1/cris-elf/gccobj/cris-elf/newlib/targ-include -isystem /tmp/hpautotest-gcc1/gcc/newlib/libc/include -B/tmp/hpautotest-gcc1/cris-elf/gccobj/cris-elf/libgloss/cris -L/tmp/hpautotest-gcc1/cris-elf/gccobj/cris-elf/libgloss/libnosys -L/tmp/hpautotest-gcc1/gcc/libgloss/cris -B/tmp/hpautotest-gcc1/cris-elf/pre/cris-elf/bin/ -B/tmp/hpautotest-gcc1/cris-elf/pre/cris-elf/lib/ -isystem /tmp/hpautotest-gcc1/cris-elf/pre/cris-elf/include -isystem /tmp/hpautotest-gcc1/cris-elf/pre/cris-elf/sys-include -I/tmp/hpautotest-gcc1/gcc/libstdc++-v3/../gcc -I/tmp/hpautotest-gcc1/cris-elf/gccobj/cris-elf/libstdc++-v3/include/cris-elf -I/tmp/hpautotest-gcc1/cris-elf/gccobj/cris-elf/libstdc++-v3/include -I/tmp/hpautotest-gcc1/gcc/libstdc++-v3/libsupc++ -fno-implicit-templates -Wall -Wextra -Wwrite-strings -Wcast-qual -fdiagnostics-show-location=once -ffunction-sections -fdata-sections -g -O2 -std=gnu++0x -c /tmp/hpautotest-gcc1/gcc/libstdc++-v3/libsupc++/nested_exception.cc -o nested_exception.o
/tmp/hpautotest-gcc1/gcc/libstdc++-v3/libsupc++/nested_exception.cc:28:3: error: 'nested_exception' does not name a type
make[4]: *** [nested_exception.lo] Error 1

Author of suspect patch CC:ed.
Note: cris-elf is a newlib-target; this error should be apparent for any *-elf or similar target.
Comment 1 Benjamin Kosnik 2011-03-15 05:17:28 UTC
Confirmed, arm-eabi.
Comment 2 Benjamin Kosnik 2011-03-15 05:18:38 UTC
Mine.
Comment 3 Benjamin Kosnik 2011-03-15 05:34:18 UTC
Created attachment 23660 [details]
patch
Comment 4 Benjamin Kosnik 2011-03-15 06:19:12 UTC
Author: bkoz
Date: Tue Mar 15 06:19:08 2011
New Revision: 170979

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=170979
Log:
2011-03-14  Benjamin Kosnik  <bkoz@redhat.com>

        PR libstdc++/48130
        * src/future.cc: Guard definitions.
        * libsupc++/nested_exception.cc: Same.



Modified:
    trunk/libstdc++-v3/ChangeLog
    trunk/libstdc++-v3/libsupc++/nested_exception.cc
    trunk/libstdc++-v3/src/future.cc
Comment 5 Benjamin Kosnik 2011-03-15 19:01:57 UTC
HP if you can confirm this is now working, can you close this? thanks.
Comment 6 Hans-Peter Nilsson 2011-03-15 20:03:22 UTC
Yep, thanks!