2011-03-14  Benjamin Kosnik  <bkoz@redhat.com>

PR libstdc++/48130
        * src/future.cc: Guard definitions.
        * libsupc++/nested_exception.cc: Same.




git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@170979 138bc75d-0d04-0410-961f-82ee72b054a4